
	* Makerules: Fix last change to use $($(subdir)-version) when set.

	* Makerules (install-lib-nosubdir): Depend on installed
	libfoo-X.Y.Z.so and libfoo.so.NN files so they are installed
	regardless of the libfoo.so target's dependencies.

	* MakeTAGS (sub-make-vars): New variable, includes generating=t.
	Use that in $(MAKE) calls.

2003-02-22  Ulrich Drepper  <drepper@redhat.com>

	* iconv/iconv_prog.c (main): Unify messages.

	* stdlib/strtod.c (INTERNAL): Remove bogus clearing of second word
	when shifting retval.
	* stdlib/tst-strtod.c (main): Add strtold test case.
	Reported by Fred J. Tydeman <tydeman@tybor.com>.

2003-02-21  Roland McGrath  <roland@redhat.com>

	* malloc/thread-freeres.c: Conditionalize on _LIBC_REENTRANT.
	* sunrpc/rpc_thread.c: Likewise for text_set_element use.
	(__rpc_thread_destroy): Add it to __libc_subfreeres too.

	* include/resolv.h: Add libc_hidden_proto for __res_nclose.
	* resolv/res_init.c (__res_nclose): Add libc_hidden_def.
	(res_thread_freeres): New function, on __libc_thread_subfreeres and
	__libc_subfreeres.

	* malloc/Versions (libc: GLIBC_PRIVATE): Add __libc_thread_freeres.
	* malloc/thread-freeres.c: New file.
	* malloc/Makefile (aux): Add it.
	* sunrpc/Versions (libc: GLIBC_PRIVATE): Removed.
	* sunrpc/rpc_thread.c (__rpc_thread_destroy): Put in special section
	"__libc_thread_freeres_fn" and add to __libc_thread_subfreeres set.

	* sysdeps/unix/sysv/linux/i386/geteuid.c (__geteuid): Typo fix.
	* sysdeps/unix/sysv/linux/i386/getgid.c (__getgid): Typo fix.

2003-02-21  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/opendir.c (__opendir): Use O_NONBLOCK in open.

	* iconvdata/Makefile (tests): Add bug-iconv3 only if
	[$(have-thread-library) = yes].

2003-02-21  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/signum.h (__SIGRTMAX): Define as _NSIG.

	* sysdeps/unix/sysv/linux/i386/getuid.c: Use INTERNAL_SYSCALL and do
	not chechk for errors (unless testing for 32bit variant).